// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Picker Styles image-navigator DragZone is dropping file 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  width: 200px;
  height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: var(--ds-space-200, 15px);
  position: relative;
  border-radius: 100%;
  -webkit-transition: background-color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
  transition: background-color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
  background-color: var(--ds-background-information-hovered, #ddecfe);
}

.emotion-0::after {
  content: '';
  border: 2px dashed var(--ds-border, #d0d6d0);
  border-radius: 100%;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  -webkit-transition: border-color 0.3s cubic-bezier(0.19, 1, 0.22, 1);
  transition: border-color 0.3s cubic-bezier(0.19, 1, 0.22, 1);
}

.emotion-0:after {
  border-color: var(--ds-border-information, #0e56c4);
  -webkit-animation: animation-0 8s linear infinite;
  animation: animation-0 8s linear infinite;
}

<div
  class="emotion-0"
/>
`;

exports[`Avatar Picker Styles image-navigator DragZone is not dropping file 1`] = `
.emotion-0 {
  width: 200px;
  height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: var(--ds-space-200, 15px);
  position: relative;
  border-radius: 100%;
  -webkit-transition: background-color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
  transition: background-color 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.emotion-0::after {
  content: '';
  border: 2px dashed var(--ds-border, #d0d6d0);
  border-radius: 100%;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  -webkit-transition: border-color 0.3s cubic-bezier(0.19, 1, 0.22, 1);
  transition: border-color 0.3s cubic-bezier(0.19, 1, 0.22, 1);
}

<div
  class="emotion-0"
/>
`;
